--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-pandas==1.5.3
-numpy==1.23.5
-tensorflow-cpu==2.12.0
-absl-py==1.4.0
-tqdm==4.66.1
-scikit-learn==1.2.2
-matplotlib==3.7.1
+pandas
+numpy<2.0
+tensorflow==2.15.0
+scikit-learn
+matplotlib
 python-binance==1.0.19
 pandas-ta==0.3.14b0
-scipy==1.10.1
-tabulate==0.9.0
-setuptools==68.2.2
+scipy
+tabulate
+setuptools
+tqdm
+keras-tuner
